parser/gen/AgentScriptCCParser.py
# Generated from /home/giovanni/ownCloud/dev/pycosmos/mas/scriptcc/singlecc/parser/AgentScriptCC.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class AgentScriptCCParser ( Parser ):

    grammarFileName = "AgentScriptCC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'~'", "'not'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'!!'", "'!'", "','", "'?'", "'$'", "'|'", 
                     "'#'", "'=>'", "':-'", "'@'", "':'", "';'", "'.'", 
                     "'_'", "'<<'", "'>>'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "'true'", "'false'", "'success'", "'fail'" ]

    symbolicNames = [ "<INVALID>", "NUMBER", "STRING", "PRIMITIVECODE", 
                      "PLUS", "MINUS", "STRONGNEGATION", "DEFAULTNEGATION", 
                      "ARITHMETICBINARYOPERATOR1", "ARITHMETICBINARYOPERATOR2", 
                      "ARITHMETICBINARYOPERATOR3", "RELATIONALLOGICALOPERATOR", 
                      "RELATIONALARITHMETICOPERATOR", "UPPERCASEATOM", "LOWERCASEATOM", 
                      "DOUBLEEXCLAMATIONMARK", "EXCLAMATIONMARK", "COMMA", 
                      "QUESTIONMARK", "DOLLAR", "VLINE", "HASH", "ACTIVERULEOPERATOR", 
                      "TRANSFORMATIONALRULEOPERATOR", "AT", "COLON", "SEMICOLON", 
                      "DOT", "UNDERSCORE", "LEFTSHIFT", "RIGHTSHIFT", "LEFTROUNDBRACKET", 
                      "RIGHTROUNDBRACKET", "LEFTANGULARBRACKET", "RIGHTANGULARBRACKET", 
                      "LEFTCURVEDBRACKET", "RIGHTCURVEDBRACKET", "TRUE", 
                      "FALSE", "SUCCESS", "FAIL", "WHITESPACE", "LINECOMMENT", 
                      "BLOCKCOMMENT" ]

    RULE_program = 0
    RULE_initial_attitude = 1
    RULE_belief = 2
    RULE_test_goal = 3
    RULE_procedural_goal = 4
    RULE_achievement_goal = 5
    RULE_maintenance_goal = 6
    RULE_active_rule = 7
    RULE_trigger = 8
    RULE_list_actions = 9
    RULE_action = 10
    RULE_belief_action = 11
    RULE_goal_action = 12
    RULE_primitive_action = 13
    RULE_primitive_invocation = 14
    RULE_transformational_rule = 15
    RULE_list_conditions = 16
    RULE_arithmetic_expression = 17
    RULE_logical_arithmetic_expression = 18
    RULE_logical_expression = 19
    RULE_neg_literal = 20
    RULE_pos_literal = 21
    RULE_naf_attitude = 22
    RULE_variable = 23
    RULE_constant = 24
    RULE_list_predicate_terms = 25
    RULE_predicate_term = 26
    RULE_arithmetic_expression_term = 27
    RULE_logical_expression_term = 28

    ruleNames =  [ "program", "initial_attitude", "belief", "test_goal", 
                   "procedural_goal", "achievement_goal", "maintenance_goal", 
                   "active_rule", "trigger", "list_actions", "action", "belief_action", 
                   "goal_action", "primitive_action", "primitive_invocation", 
                   "transformational_rule", "list_conditions", "arithmetic_expression", 
                   "logical_arithmetic_expression", "logical_expression", 
                   "neg_literal", "pos_literal", "naf_attitude", "variable", 
                   "constant", "list_predicate_terms", "predicate_term", 
                   "arithmetic_expression_term", "logical_expression_term" ]

    EOF = Token.EOF
    NUMBER=1
    STRING=2
    PRIMITIVECODE=3
    PLUS=4
    MINUS=5
    STRONGNEGATION=6
    DEFAULTNEGATION=7
    ARITHMETICBINARYOPERATOR1=8
    ARITHMETICBINARYOPERATOR2=9
    ARITHMETICBINARYOPERATOR3=10
    RELATIONALLOGICALOPERATOR=11
    RELATIONALARITHMETICOPERATOR=12
    UPPERCASEATOM=13
    LOWERCASEATOM=14
    DOUBLEEXCLAMATIONMARK=15
    EXCLAMATIONMARK=16
    COMMA=17
    QUESTIONMARK=18
    DOLLAR=19
    VLINE=20
    HASH=21
    ACTIVERULEOPERATOR=22
    TRANSFORMATIONALRULEOPERATOR=23
    AT=24
    COLON=25
    SEMICOLON=26
    DOT=27
    UNDERSCORE=28
    LEFTSHIFT=29
    RIGHTSHIFT=30
    LEFTROUNDBRACKET=31
    RIGHTROUNDBRACKET=32
    LEFTANGULARBRACKET=33
    RIGHTANGULARBRACKET=34
    LEFTCURVEDBRACKET=35
    RIGHTCURVEDBRACKET=36
    TRUE=37
    FALSE=38
    SUCCESS=39
    FAIL=40
    WHITESPACE=41
    LINECOMMENT=42
    BLOCKCOMMENT=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initial_attitude(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentScriptCCParser.Initial_attitudeContext)
            else:
                return self.getTypedRuleContext(AgentScriptCCParser.Initial_attitudeContext,i)


        def transformational_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentScriptCCParser.Transformational_ruleContext)
            else:
                return self.getTypedRuleContext(AgentScriptCCParser.Transformational_ruleContext,i)


        def active_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentScriptCCParser.Active_ruleContext)
            else:
                return self.getTypedRuleContext(AgentScriptCCParser.Active_ruleContext,i)


        def getRuleIndex(self):
            return AgentScriptCCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AgentScriptCCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 61
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 58
                    self.initial_attitude()
                    pass

                elif la_ == 2:
                    self.state = 59
                    self.transformational_rule()
                    pass

                elif la_ == 3:
                    self.state = 60
                    self.active_rule()
                    pass


                self.state = 63 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AgentScriptCCParser.PLUS) | (1 << AgentScriptCCParser.MINUS) | (1 << AgentScriptCCParser.STRONGNEGATION) | (1 << AgentScriptCCParser.LOWERCASEATOM) | (1 << AgentScriptCCParser.DOUBLEEXCLAMATIONMARK) | (1 << AgentScriptCCParser.EXCLAMATIONMARK) | (1 << AgentScriptCCParser.TRANSFORMATIONALRULEOPERATOR))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Initial_attitudeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOT(self):
            return self.getToken(AgentScriptCCParser.DOT, 0)

        def belief(self):
            return self.getTypedRuleContext(AgentScriptCCParser.BeliefContext,0)


        def procedural_goal(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Procedural_goalContext,0)


        def achievement_goal(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Achievement_goalContext,0)


        def maintenance_goal(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Maintenance_goalContext,0)


        def getRuleIndex(self):
            return AgentScriptCCParser.RULE_initial_attitude

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitial_attitude" ):
                listener.enterInitial_attitude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitial_attitude" ):
                listener.exitInitial_attitude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitial_attitude" ):
                return visitor.visitInitial_attitude(self)
            else:
                return visitor.visitChildren(self)




    def initial_attitude(self):

        localctx = AgentScriptCCParser.Initial_attitudeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_initial_attitude)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 65
                self.belief()
                pass

            elif la_ == 2:
                self.state = 66
                self.procedural_goal()
                pass

            elif la_ == 3:
                self.state = 67
                self.achievement_goal()
                pass

            elif la_ == 4:
                self.state = 68
                self.maintenance_goal()
                pass


            self.state = 71
            self.match(AgentScriptCCParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeliefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def neg_literal(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Neg_literalContext,0)


        def getRuleIndex(self):
            return AgentScriptCCParser.RULE_belief

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBelief" ):
                listener.enterBelief(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBelief" ):
                listener.exitBelief(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBelief" ):
                return visitor.visitBelief(self)
            else:
                return visitor.visitChildren(self)




    def belief(self):

        localctx = AgentScriptCCParser.BeliefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_belief)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.neg_literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Test_goalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUESTIONMARK(self):
            return self.getToken(AgentScriptCCParser.QUESTIONMARK, 0)

        def neg_literal(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Neg_literalContext,0)


        def getRuleIndex(self):
            return AgentScriptCCParser.RULE_test_goal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTest_goal" ):
                listener.enterTest_goal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTest_goal" ):
                listener.exitTest_goal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTest_goal" ):
                return visitor.visitTest_goal(self)
            else:
                return visitor.visitChildren(self)




    def test_goal(self):

        localctx = AgentScriptCCParser.Test_goalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_test_goal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(AgentScriptCCParser.QUESTIONMARK)
            self.state = 76
            self.neg_literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Procedural_goalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXCLAMATIONMARK(self):
            return self.getToken(AgentScriptCCParser.EXCLAMATIONMARK, 0)

        def AT(self):
            return self.getToken(AgentScriptCCParser.AT, 0)

        def pos_literal(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Pos_literalContext,0)


        def getRuleIndex(self):
            return AgentScriptCCParser.RULE_procedural_goal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedural_goal" ):
                listener.enterProcedural_goal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedural_goal" ):
                listener.exitProcedural_goal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedural_goal" ):
                return visitor.visitProcedural_goal(self)
            else:
                return visitor.visitChildren(self)




    def procedural_goal(self):

        localctx = AgentScriptCCParser.Procedural_goalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_procedural_goal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(AgentScriptCCParser.EXCLAMATIONMARK)
            self.state = 79
            self.match(AgentScriptCCParser.AT)
            self.state = 80
            self.pos_literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Achievement_goalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXCLAMATIONMARK(self):
            return self.getToken(AgentScriptCCParser.EXCLAMATIONMARK, 0)

        def neg_literal(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Neg_literalContext,0)


        def getRuleIndex(self):
            return AgentScriptCCParser.RULE_achievement_goal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAchievement_goal" ):
                listener.enterAchievement_goal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAchievement_goal" ):
                listener.exitAchievement_goal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAchievement_goal" ):
                return visitor.visitAchievement_goal(self)
            else:
                return visitor.visitChildren(self)




    def achievement_goal(self):

        localctx = AgentScriptCCParser.Achievement_goalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_achievement_goal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(AgentScriptCCParser.EXCLAMATIONMARK)
            self.state = 83
            self.neg_literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Maintenance_goalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOUBLEEXCLAMATIONMARK(self):
            return self.getToken(AgentScriptCCParser.DOUBLEEXCLAMATIONMARK, 0)

        def neg_literal(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Neg_literalContext,0)


        def getRuleIndex(self):
            return AgentScriptCCParser.RULE_maintenance_goal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMaintenance_goal" ):
                listener.enterMaintenance_goal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMaintenance_goal" ):
                listener.exitMaintenance_goal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMaintenance_goal" ):
                return visitor.visitMaintenance_goal(self)
            else:
                return visitor.visitChildren(self)




    def maintenance_goal(self):

        localctx = AgentScriptCCParser.Maintenance_goalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_maintenance_goal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(AgentScriptCCParser.DOUBLEEXCLAMATIONMARK)
            self.state = 86
            self.neg_literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Active_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trigger(self):
            return self.getTypedRuleContext(AgentScriptCCParser.TriggerContext,0)


        def ACTIVERULEOPERATOR(self):
            return self.getToken(AgentScriptCCParser.ACTIVERULEOPERATOR, 0)

        def list_actions(self):
            return self.getTypedRuleContext(AgentScriptCCParser.List_actionsContext,0)


        def DOT(self):
            return self.getToken(AgentScriptCCParser.DOT, 0)

        def COLON(self):
            return self.getToken(AgentScriptCCParser.COLON, 0)

        def list_conditions(self):
            return self.getTypedRuleContext(AgentScriptCCParser.List_conditionsContext,0)


        def getRuleIndex(self):
            return AgentScriptCCParser.RULE_active_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActive_rule" ):
                listener.enterActive_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActive_rule" ):
                listener.exitActive_rule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActive_rule" ):
                return visitor.visitActive_rule(self)
            else:
                return visitor.visitChildren(self)




    def active_rule(self):

        localctx = AgentScriptCCParser.Active_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_active_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.trigger()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AgentScriptCCParser.COLON:
                self.state = 89
                self.match(AgentScriptCCParser.COLON)
                self.state = 90
                self.list_conditions()


            self.state = 93
            self.match(AgentScriptCCParser.ACTIVERULEOPERATOR)
            self.state = 94
            self.list_actions()
            self.state = 95
            self.match(AgentScriptCCParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TriggerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(AgentScriptCCParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(AgentScriptCCParser.MINUS, 0)

        def belief(self):
            return self.getTypedRuleContext(AgentScriptCCParser.BeliefContext,0)


        def test_goal(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Test_goalContext,0)


        def procedural_goal(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Procedural_goalContext,0)


        def achievement_goal(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Achievement_goalContext,0)


        def maintenance_goal(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Maintenance_goalContext,0)


        def getRuleIndex(self):
            return AgentScriptCCParser.RULE_trigger

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrigger" ):
                listener.enterTrigger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrigger" ):
                listener.exitTrigger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrigger" ):
                return visitor.visitTrigger(self)
            else:
                return visitor.visitChildren(self)




    def trigger(self):

        localctx = AgentScriptCCParser.TriggerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_trigger)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not(_la==AgentScriptCCParser.PLUS or _la==AgentScriptCCParser.MINUS):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 98
                self.belief()
                pass

            elif la_ == 2:
                self.state = 99
                self.test_goal()
                pass

            elif la_ == 3:
                self.state = 100
                self.procedural_goal()
                pass

            elif la_ == 4:
                self.state = 101
                self.achievement_goal()
                pass

            elif la_ == 5:
                self.state = 102
                self.maintenance_goal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_actionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentScriptCCParser.ActionContext)
            else:
                return self.getTypedRuleContext(AgentScriptCCParser.ActionContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(AgentScriptCCParser.SEMICOLON)
            else:
                return self.getToken(AgentScriptCCParser.SEMICOLON, i)

        def getRuleIndex(self):
            return AgentScriptCCParser.RULE_list_actions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_actions" ):
                listener.enterList_actions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_actions" ):
                listener.exitList_actions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_actions" ):
                return visitor.visitList_actions(self)
            else:
                return visitor.visitChildren(self)




    def list_actions(self):

        localctx = AgentScriptCCParser.List_actionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_list_actions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.action()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AgentScriptCCParser.SEMICOLON:
                self.state = 106
                self.match(AgentScriptCCParser.SEMICOLON)
                self.state = 107
                self.action()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_action(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Primitive_actionContext,0)


        def belief_action(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Belief_actionContext,0)


        def goal_action(self):
            return self.getTypedRuleContext(AgentScriptCCParser.Goal_actionContext,0)


        def SUCCESS(self):
            return self.getToken(AgentScriptCCParser.SUCCESS, 0)

        def FAIL(self):
            return self.getToken(AgentScriptCCParser.FAIL, 0)

        def getRuleIndex(self):
            return AgentScriptCCParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction" ):
                return visitor.visitAction(self)
            else:
                return visitor.visitChildren(self)




    def action(self):

        localctx = AgentScriptCCParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_action)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AgentScriptCCParser.PRIMITIVECODE, AgentScriptCCParser.HASH]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.primitive_action()
                pass
            elif token in [AgentScriptCCParser.PLUS, AgentScriptCCParser.MINUS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.belief_action()
                pass
            elif token in [AgentScriptCCParser.EXCLAMATIONMARK, AgentScriptCCParser.QUESTIONMARK]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.goal_action()
                pass
            elif token in [AgentScriptCCParser.SUCCESS]:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.match(AgentScriptCCParser.SUCCESS)
                pass
            elif token in [AgentScriptCCParser.FAIL]:
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.match(AgentScriptCCParser.FAIL)
                pass
            else:
                raise NoViableAltException(self)
